objects/In_Person_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>In-Person Activities</relationshipLabel>
        <relationshipName>In_Person_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agenda_Detail__c</fullName>
        <label>Agenda Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>In-Person Activities</relationshipLabel>
        <relationshipName>In_Person_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <label>General Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market_Notes__c</fullName>
        <label>Market Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Momentum__c</fullName>
        <label>Momentum</label>
        <picklist>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Share_of_Account__c</fullName>
        <label>Share of Account</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>In-Person Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>In-Person Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>In-Person Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>